# alif-aur-tarana

./: .gitignore  README.md
backend/: .env.example  README.md  check_keys.py  eval_persona.py  precompute_cues.py  pyproject.toml  spike_tts.py  spike_voice.py
backend/aat/: __init__.py  agent.py  audio.py  config.py  cues.py  exceptions.py  main.py  pron.py  schemas.py  text.py
backend/aat/content/: __init__.py  corpus.py
backend/aat/llm/: __init__.py  base.py  gemini.py  groq_llm.py  router.py
backend/aat/memory/: __init__.py  store.py
backend/aat/personas/: __init__.py  alif.py  shared.py  tarana.py
backend/aat/stt/: __init__.py  base.py  local_whisper.py  router.py  sarvam.py
backend/aat/tts/: __init__.py  base.py  cache.py  elevenlabs_tts.py  router.py
backend/static/: index.html
backend/tests/: test_corpus.py  test_cues.py  test_memory.py  test_pron.py  test_routers.py  test_schemas.py  test_text.py
data/corpus/: seed.json
design/: DESIGN.md  README.md  tokens.css
design/inspiration/: README.md
docs/: 01-product-vision.md  02-voice-stack-research.md  03-architecture.md  04-tools-and-integrations.md  05-tech-stack.md  06-cross-platform.md  07-execution-roadmap.md  08-decision-matrix.md  09-companion-craft-and-prompts.md  10-pronunciation-coaching.md  11-voice-identity-and-cloning.md  12-setup-and-api-keys.md  13-mvp-build-plan.md  14-companion-voice-prompts.md  15-elevenlabs-v3-mastery.md  README.md
docs/inspiration/: README.md
frontend/: README.md  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
(+9 files in other folders)
